# viet-tts

./: .gitignore  Dockerfile  README.md  README_VN.md  docker-compose.yaml  pyproject.toml
viettts/: cli.py  server.py  tts.py
viettts/flow/: flow.py
viettts/utils/: file_utils.py
